<resources>
    <string name="app_name">Project</string>
    <string name="textHintPassword">Password</string>
    <string name="textHintUsername">Username</string>
    <string name="textHintFirstName">First Name</string>
    <string name="textHintLastName">Last Name</string>
    <string name="textHintPasswordRepeat">Repeat Password</string>
     <string name="textHintAccountType">Account Type</string>
    <string name="textTitle">Login</string>
    <string name="textCreateTitle">Create Account</string>
    <string name="textButtonCreateAccount">Create Account</string>
    <string name="textButtonLogin">Login</string>
    <string name="strTitleMember">Members</string>
    <string name="strTitleAdmin">Welcome Administrator!</string>
    <string name="strTitleInstructor">Instructors</string>
    <string name="textBtnLogout">Logout</string>
    <string name="btnClasses">View Classes</string>
    <string name="btnAccounts">View Accounts</string>
    <string name="btnStatistics">View Stats</string>
    <string name="textDescriptionAdmin">Welcome to the administrator page, here you can view/edit/create/delete classes and user accounts (aside from the admin account). You may also view the statistics of the app. Please select the desired option below:</string>
    <string name="textAdminAccountsTitle">Active Accounts</string>
    <string name="textAdminAccountsBack">Back</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="textTypeAccountList">Username</string>
    <string name="textUsernameAccountList">Account Type</string>
    <string name="textFirstNameAccountList">First Name</string>
    <string name="textLastNameAccountList">Last Name</string>
    <string name="textAdminAccountsSave">Save</string>
    <string name="textAdminAccountsCancel">Cancel</string>
    <string name="textAdminEditAccountsTitle">Edit Account ID:</string>
    <string name="textAdminEditAccountsID">ID</string>
    <string name="textAdminStatisticsTitle">Database Statistics Coming Soon! (In Future Deliverables)</string>
    <string name="textTypeClassList">Name</string>
    <string name="textAdminClassesTitle">Active Classes</string>
    <string name="textAdminClassesBack">Back</string>
    <string name="textButtonCreateClass">Create Class</string>
    <string name="textCreateClassTitle">Create Class</string>
    <string name="textHintClassDescription">Class Description</string>
    <string name="textHintClassName">Class Name</string>
    <string name="textEditClassTitle">Edit Class ID:</string>
    <string name="textEditClassID">ID</string>
    <string name="textClassNameEditTitle">Class Name:</string>
    <string name="textClassDescriptionEditTitle">Class Description:</string>
    <string name="textEditAccountType">Account Type:</string>
    <string name="textEditAccountUsername">Username:</string>
    <string name="textEditAccountFirstName">First Name:</string>
    <string name="textEditAccountLastName">Last Name:</string>
    <string name="textEditAccountPassword">Password:</string>

</resources>